--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=/ext!00x
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jap.generate-dll=true
+spring.jpa.hibernate.ddl-auto=create
+
